--- a/package.json
+++ b/package.json
@@ -1,5 +1,15 @@
 {
   "dependencies": {
-    "firebase": "^9.12.1"
+    "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "firebase": "^9.14.0",
+    "firebase-admin": "^11.3.0"
   }
+
+  ,
+  "scripts": {
+    "start": "node index.js"
+  }
+  
 }
