--- a/halaqa_app/pubspec.yaml
+++ b/halaqa_app/pubspec.yaml
@@ -73,6 +73,10 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
       - images/logo.png
+      - images/studentsIcon.png
+      - images/studentIcon.png
+      - images/gradesIcon.png
+      - images/chatIcon.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
