--- a/halaqa_app/pubspec.yaml
+++ b/halaqa_app/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
     sdk: flutter
   localization: ^2.1.0
   flutter_cupertino_localizations: ^1.0.1
+  get: ^4.6.5
 
 dev_dependencies:
   flutter_test:
