--- a/halaqa_app/pubspec.yaml
+++ b/halaqa_app/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   localization: ^2.1.0
   flutter_cupertino_localizations: ^1.0.1
   get: ^4.6.5
+  
+  titled_navigation_bar: ^5.0.0-nullsafety.0
 
 dev_dependencies:
   flutter_test:
@@ -82,6 +84,7 @@ flutter:
       - images/subjectsIcon.png
       - images/absenceIcon.png
       - images/gradeIcon.png
+      - images/eventsIcon.png
      
   #   - images/a_dot_ham.jpeg
 
