--- a/halaqa_app/ios/Flutter/Generated.xcconfig
+++ b/halaqa_app/ios/Flutter/Generated.xcconfig
@@ -1,12 +1,12 @@
 // This is a generated file; do not edit or check into version control.
-FLUTTER_ROOT=/Users/maca7/flutter
-FLUTTER_APPLICATION_PATH=/Users/maca7/Desktop/2022-GP1-06/halaqa_app
+FLUTTER_ROOT=C:\flutter_windows_3.3.0-stable\flutter
+FLUTTER_APPLICATION_PATH=C:\Users\ree4m\Desktop\GP1\2022-GP1-06\halaqa_app
 COCOAPODS_PARALLEL_CODE_SIGN=true
-FLUTTER_TARGET=lib/main.dart
+FLUTTER_TARGET=lib\main.dart
 FLUTTER_BUILD_DIR=build
 FLUTTER_BUILD_NAME=1.0.0
 FLUTTER_BUILD_NUMBER=1
-EXCLUDED_ARCHS[sdk=iphonesimulator*]=i386
+EXCLUDED_ARCHS[sdk=iphonesimulator*]=i386 arm64
 EXCLUDED_ARCHS[sdk=iphoneos*]=armv7
 DART_OBFUSCATION=false
 TRACK_WIDGET_CREATION=true
