--- a/halaqa_app/pubspec.yaml
+++ b/halaqa_app/pubspec.yaml
@@ -32,6 +32,12 @@ dependencies:
   flutter:
     sdk: flutter
 
+# file downloads
+  path_provider: ^2.0.8
+  dio: ^4.0.4
+  permission_handler: ^8.3.0
+  open_file: ^3.2.1
+  universal_html: ^2.0.8
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
