--- a/halaqa_app/pubspec.yaml
+++ b/halaqa_app/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  
+  intl: ^0.17.0
   cupertino_icons: ^1.0.2
   firebase_core: ^2.4.0
   firebase_auth: ^4.2.0
@@ -84,13 +86,13 @@ flutter:
       - images/logo.png
       - images/studentsIcon.png
       - images/studentIcon.png
-      - images/gradesIcon.png
       - images/chatIcon.png
       - images/editIcon.png
       - images/subjectsIcon.png
       - images/absenceIcon.png
       - images/gradeIcon.png
       - images/eventsIcon.png
+      - images/gradesIcon.png
      
   #   - images/a_dot_ham.jpeg
 
