--- a/halaqa_app/ios/Runner/Info.plist
+++ b/halaqa_app/ios/Runner/Info.plist
@@ -47,5 +47,15 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>UISupportsDocumentBrowser</key> 
+	<true/>
+	<key>LSSupportsOpeningDocumentsInPlace</key>
+	<true/>
+	<key>UIFileSharingEnabled</key> 
+	<true/>
+	<key>LSApplicationQueriesSchemes</key>
+<array>
+  <string>https</string>
+</array>
 </dict>
 </plist>
