--- a/halaqa_app/pubspec.yaml
+++ b/halaqa_app/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   permission_handler: ^8.3.0
   open_file: ^3.2.1
   universal_html: ^2.0.8
+  downloads_path_provider_28: ^0.1.2
+  file_picker:  ^4.5.1
+  url_launcher: ^6.1.7
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
