--- a/halaqa_app/pubspec.yaml
+++ b/halaqa_app/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   
   intl: ^0.17.0
+  full_screen_image_null_safe: any
+  full_screen_network_image: ^1.0.0
   cupertino_icons: ^1.0.2
   firebase_core: ^2.4.0
   firebase_auth: ^4.2.0
