--- a/halaqa_app/android/local.properties
+++ b/halaqa_app/android/local.properties
@@ -1,5 +1,5 @@
 sdk.dir=C:\\Users\\ree4m\\AppData\\Local\\Android\\sdk
-flutter.sdk=C:\\flutter_windows_3.3.0-stable\\flutter
+flutter.sdk=/Users/njoudalfahad/Downloads/sdks/flutter
 =======
 flutter.buildMode=debug
 flutter.versionName=1.0.0
