--- a/halaqa_app/android/local.properties
+++ b/halaqa_app/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=C:\\Users\\ree4m\\AppData\\Local\\Android\\sdk
-flutter.sdk=/Users/njoudalfahad/Downloads/sdks/flutter
+sdk.dir=/Users/maca7/Library/Android/sdk
+flutter.sdk=/Users/maca7/flutter
 =======
 flutter.buildMode=debug
 flutter.versionName=1.0.0
