parentHP and bottomBar updated

--- a/halaqa_app/pubspec.yaml
+++ b/halaqa_app/pubspec.yaml
@@ -106,6 +106,7 @@ flutter:
       - images/gradeIcon.png
       - images/eventsIcon.png
       - images/gradesIcon.png
+      - images/announcementIcon.png
      
 
 
