--- a/halaqa_app/pubspec.yaml
+++ b/halaqa_app/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   file_picker:  ^4.5.1
   url_launcher: ^6.1.7
 
+
+# notfication
+  flutter_local_notifications: ^9.2.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   
@@ -71,6 +74,8 @@ dependencies:
   flutter_chat_bubble: ^2.0.0
   native_font: ^1.1.0
   intl_phone_field: ^3.1.0
+  firebase_messaging: ^14.2.1
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
