--- a/halaqa_app/pubspec.yaml
+++ b/halaqa_app/pubspec.yaml
@@ -82,6 +82,7 @@ dependencies:
   firebase_messaging: ^14.2.1
   http: ^0.13.5
   dbus: ^0.7.4
+  flutter_datetime_picker: ^1.5.1
 
 dev_dependencies:
   flutter_test:
