--- a/halaqa_app/android/local.properties
+++ b/halaqa_app/android/local.properties
@@ -1,9 +1,9 @@
-sdk.dir=C:\\Users\\ree4m\\AppData\\Local\\Android\\sdk
-flutter.sdk=C:\\flutter_windows_3.3.0-stable\\flutter
+sdk.dir=/Users/maca7/Library/Android/sdk
+flutter.sdk=/Users/maca7/flutter
 =======
 flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=1
-flutter.minSdkVersion=23 
+flutter.minSdkVersion=23
 flutter.targetSdkVersion=30
 flutter.compileSdkVersion=30
