--- a/halaqa_app/pubspec.yaml
+++ b/halaqa_app/pubspec.yaml
@@ -128,6 +128,8 @@ flutter_icons:
   android: true
   ios: true
   image_path: "images/logo.png"
+ # adaptive_icon_background: "#fe6017"
+ # adaptive_icon_foreground: "images/logo.png"
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
