--- a/halaqa_app/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
+++ b/halaqa_app/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
@@ -1,15 +1,13 @@
 // This is a generated file; do not edit or check into version control.
-FLUTTER_ROOT=/Users/maca7/flutter
-FLUTTER_APPLICATION_PATH=/Users/maca7/Desktop/2022-GP1-06/halaqa_app
+FLUTTER_ROOT=/Users/njoudalfahad/Downloads/sdks/flutter
+FLUTTER_APPLICATION_PATH=/Users/njoudalfahad/Downloads/2022-GP1-06/halaqa_app
 COCOAPODS_PARALLEL_CODE_SIGN=true
-<<<<<<< HEAD
-=======
-FLUTTER_TARGET=/Users/njoudalfahad/Downloads/2022-GP1-06/halaqa_app/lib/pickup.dart
->>>>>>> 8b4b20e2 (final pickup)
+FLUTTER_TARGET=/Users/njoudalfahad/Downloads/2022-GP1-06/halaqa_app/lib/main.dart
 FLUTTER_BUILD_DIR=build
 FLUTTER_BUILD_NAME=1.0.0
 FLUTTER_BUILD_NUMBER=1
+DART_DEFINES=RkxVVFRFUl9XRUJfQVVUT19ERVRFQ1Q9dHJ1ZQ==
 DART_OBFUSCATION=false
 TRACK_WIDGET_CREATION=true
 TREE_SHAKE_ICONS=false
-PACKAGE_CONFIG=.dart_tool/package_config.json
+PACKAGE_CONFIG=/Users/njoudalfahad/Downloads/2022-GP1-06/halaqa_app/.dart_tool/package_config.json
