--- a/halaqa_app/pubspec.yaml
+++ b/halaqa_app/pubspec.yaml
@@ -83,6 +83,8 @@ dependencies:
   dbus: ^0.7.4
   flutter_datetime_picker: ^1.5.1
   shared_preferences: ^2.0.18
+  push: ^0.1.3
+  arabic_numbers: ^1.0.0
 
 
 
@@ -127,9 +129,10 @@ flutter:
 flutter_icons:
   android: true
   ios: true
-  image_path: "images/logo.png"
- # adaptive_icon_background: "#fe6017"
- # adaptive_icon_foreground: "images/logo.png"
+  image_path_android: "images/logoAnd.png"
+  image_path_ios: "images/WhiteLogoIos.png"
+  
+
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
