--- a/halaqa_app/android/local.properties
+++ b/halaqa_app/android/local.properties
@@ -1,7 +1,7 @@
 sdk.dir=/Users/maca7/Library/Android/sdk
 flutter.sdk=/Users/maca7/flutter
 =======
-flutter.buildMode=debug
+flutter.buildMode=release
 flutter.versionName=1.0.0
 flutter.versionCode=1
 flutter.minSdkVersion=23
